--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="image">
-        <img src="images/p1.jpg"  alt="">
+        <img src="p1.jpg"  alt="">
     </div>
 
 </div>
@@ -113,7 +113,7 @@
 <div class="card-container">
 
     <div class="card">
-        <img src="images/pic1.jpg" alt="">
+        <img src="pic1.jpg" alt="">
         <h3>Mrs.Julia</h3>
         <p>Proficiency in Web development</p>
         <div class="icons">
@@ -125,7 +125,7 @@
     </div>
 
     <div class="card">
-        <img src="images/pic2.jpg" alt="">
+        <img src="pic2.jpg" alt="">
         <h3>Mr.Jackie</h3>
         <p>Proficiency in C++</p>
         <div class="icons">
@@ -137,7 +137,7 @@
     </div>
 
     <div class="card">
-        <img src="images/pic3.jpg" alt="">
+        <img src="pic3.jpg" alt="">
         <h3>Mrs.Eliza</h3>
         <p>Proficiency in DBMS</p>
         <div class="icons">
@@ -149,7 +149,7 @@
     </div>
 
     <div class="card">
-        <img src="images/pic4.jpg" alt="">
+        <img src="pic4.jpg" alt="">
         <h3>Mr.Shakir Khan</h3>
         <p>Proficiency in Web development</p>
         <div class="icons">
@@ -229,7 +229,7 @@
 <div class="box-container">
 
     <div class="box">
-        <img src="images/p1.jpg" alt="">
+        <img src="p1.jpg" alt="">
         <h3>Rajdeep Singh</h3>
         <p>Very helpful and knowledgable platform for online courses</p>
         <div class="stars">
@@ -242,7 +242,7 @@
     </div>
 
     <div class="box">
-        <img src="images/pic2.jpg" alt="">
+        <img src="pic2.jpg" alt="">
         <h3>Jakir</h3>
         <p>Best E-learning platform to get started for begineer</p>
         <div class="stars">
@@ -254,7 +254,7 @@
     </div>
 
     <div class="box">
-        <img src="images/pic3.jpg" alt="">
+        <img src="pic3.jpg" alt="">
         <h3>Julia</h3>
         <p>Best and wonderful platform to get started with..</p>
         <div class="stars">
@@ -282,7 +282,7 @@
 <div class="row">
 
     <div class="image">
-        <img src="images/contact.png" alt="">
+        <img src="contact.png" alt="">
     </div>
 
     <div class="form-container">
